# xontrib-fish-completer

./: .copier-answers.yml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
tests/: test_xontrib.py
xontrib/: fish_completer.py
